--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"files.associations": {
 		"stdio.h": "c",
 		"libftprintf.h": "c",
-		"ft_printf.h": "c"
+		"ft_printf.h": "c",
+		"unistd.h": "c"
 	}
 }
